After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 626822 - Show a warning when resizing smaller than recommended size
Show a warning when resizing smaller than recommended size
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: Soren Sandmann Pedersen
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-08-13 13:01 UTC by Pedro Villavicencio
Modified: 2011-02-01 02:34 UTC
See Also:
GNOME target: ---
GNOME version: 2.29/2.30



Description Pedro Villavicencio 2010-08-13 13:01:03 UTC
this report has been filed here:

https://bugs.edge.launchpad.net/ubuntu/+source/gnome-control-center/+bug/463902

"I have activated the smallest resolution supported by my Monitor 720 x 400. The bug should be in the command "gnome-display-properties".

After activating this resolution, it was no longer possible to switch back to a higher resolution using the mouse, as the "Apply" button was outside the screen.
"
Comment 1 Bastien Nocera 2011-01-27 15:16:05 UTC
The question is whether we should show resolutions that are smaller than the size of the window itself.
Comment 2 William Jon McCann 2011-01-31 17:54:07 UTC
We are currently targeting a minimum size of 675x530.  See, http://live.gnome.org/Design/SystemSettings.

I'm not sure if there is much we can do at 400px...
Comment 3 Bastien Nocera 2011-01-31 21:17:54 UTC
Let's add a warning and allow the users to shoot themselves in the foot.
Comment 4 Bastien Nocera 2011-02-01 02:34:33 UTC
commit 233339ce3d89bba0b98ccfc616a23a80a43a4fc8
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Feb 1 02:28:52 2011 +0000

    display: Hide unsupported sizes
    
    Sizes smaller than 675x530 aren't supported in the design, so
    avoid them, unless they're bigger than the current output size
    (so you could go up from them).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=626822