display: Hide unsupported sizes

Sizes smaller than 675x530 aren't supported in the design, so
avoid them, unless they're bigger than the current output size
(so you could go up from them).

https://bugzilla.gnome.org/show_bug.cgi?id=626822